kubernetes/deployments/portfolio/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend
  namespace: rafael-homelab
spec:
  selector:
    app: portfolio-frontend
  ports:
    - port: 8000
      targetPort: 8000
