kubernetes/deployments/portfolio/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: rafael-homelab
spec:
  selector:
    app: portfolio
  ports:
    - port: 8000
      targetPort: 8000
